# AI_attempts

./: CMakeLists.txt  dlib.cpp  embed.cpp  embed.h  meson.build  sqlconn.cpp  sqlconn.h
python/: bayes_weight.py  gauss.py  mydlib.py  p.py  p2.py  random_forest.py  random_forest2.py  random_forest_weight.py  x.py
